<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddingCompany">

    <TextView
        android:id="@+id/hdcompany"
        android:layout_width="wrap_content"
        android:layout_height="55sp"
        android:text="@string/company_details"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="#000000"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="330sp"
        android:layout_height="230sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hdcompany"
        app:srcCompat="@drawable/ic_company_black_24dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="204sp"
        android:layout_height="30sp"
        android:text="@string/choose_an_image"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_marginTop="15sp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10sp"/>

    <Button
        android:id="@+id/choosebutton"
        android:layout_width="wrap_content"
        android:layout_height="36sp"
        android:onClick="ChooseImage"
        android:text="@string/choose"
        android:layout_marginTop="15sp"
        android:textColor="#ffffff"
        android:layout_marginStart="10sp"
        app:layout_constraintLeft_toRightOf="@id/textView3"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:textSize="18sp"
        android:background="@drawable/myowngradient"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_title"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25sp"
        android:layout_marginStart="10sp" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:textColor="#000000"
        android:hint="  Enter Title here"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/newedittext"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_description"
        android:textSize="24sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle"
        android:layout_marginTop="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10sp"/>



    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:hint="  Enter Description here"
        android:inputType="textMultiLine"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:textSize="24sp"
        android:background="@drawable/newedittext"/>

    <Button
        android:id="@+id/tickbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="24sp"
        android:textColor="#ffffff"
        android:onClick="TickClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20sp"
        android:background="@drawable/myowngradient2"/>
</androidx.constraintlayout.widget.ConstraintLayout>